2019-01-07  Kingpin  <martin@martin-M17x>

	* Changed from Class::MakeMethods to Class::MethodMaker

2009-07-04  Kingpin  <Martin@BLUEMAX>

	* lib/RDF/Simple/Serialiser.pm (_make_object): don't require object to be a full URI

2009-07-03  Kingpin  <Martin@BLUEMAX>

	* lib/RDF/Simple/Serialiser.pm: don't require subject to be a full URI

	* lib/RDF/Simple/Parser/Handler.pm: Try to parse the xml:base from the header and use it when needed

2009-04-11  Kingpin  <Martin@BLUEMAX>

	* lib/RDF/Simple/Parser/Handler.pm (propertyElt): fixed to allow literals with value '0'

2009-04-09  Kingpin  <Martin@BLUEMAX>

	* lib/RDF/Simple/Parser/Sink.pm: got rid of this empty unused module

	* lib/RDF/Simple/Parser/Handler.pm (propertyElt): fixed wrong method name called!

	* lib/RDF/Simple/Parser.pm (parse_rdf): fixed to handle case when handler returns no result

2009-04-08  Kingpin  <Martin@BLUEMAX>

	* lib/RDF/Simple/Parser/Handler.pm (propertyElt): fixed to handle simple rdf:resource attributes

2009-03-26  Kingpin  <Martin@BLUEMAX>

	* lib/RDF/Simple/Serialiser.pm (_make_object): if object is scalar ref, output as literal (even if it looks like a URI)

2009-03-02  Kingpin  <Martin@BLUEMAX>

	* lib/RDF/Simple/Parser/Handler.pm (characters): FIXED to allow data to be parsed in multiple chunks

2009-03-01  Kingpin  <Martin@BLUEMAX>

	* lib/RDF/Simple/Parser/Handler.pm (emptyPropertyElt): FIXED for RT#43688: do not create bNode for empty-string property value

2008-12-06  Kingpin  <Martin@BLUEMAX>

	* simplified the tests

	* massive code clean ups (now uses Class::MethodMaker)

2008-10-05  Kingpin  <Martin@BLUEMAX>

	* lib/RDF/Simple/Serialiser.pm (make_object): fixed for RT ticket 29067
	(make_object): fixed for RT ticket 35484
	(make_object): fixed for RT ticket 37335

	* lib/RDF/Simple/Parser.pm (parseTypeCollectionPropertyElt): applied fix described in RT ticket 25302

	* lib/RDF/Simple/Serializer.pm: new file

	* Makefile.PL: converted to Module::Install
