@@ -1,5 +1,0 @@
-TODO list for Perl module RDF::Simple
-
-- Nothing yet
-
-
