@@ -1,0 +1,21 @@
+name    = RDF-Simple
+version = 0.421
+author  = Martin Thurn <mthurn@cpan.org>
+license = Perl_5
+copyright_holder = Martin Thurn
+
+[GatherDir]
+[PruneCruft]
+[MetaYAML]
+[MakeMaker]
+[Manifest]
+
+[AutoPrereqs]
+[OSPrereqs / linux]
+XML::SAX::Expat = 0
+[OSPrereqs / solaris]
+XML::SAX::Expat = 0
+
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
