@@ -1,6 +1,10 @@
+2020-03-06  Kingpin  <martin@ubuntu>
+
+	* (Head): Changed from Module::Install to Dist::Zilla
+
 2019-01-07  Kingpin  <martin@martin-M17x>
 
-	* Changed from Class::MakeMethods to Class::MethodMaker
+	* (Head): Changed from Class::MakeMethods to Class::MethodMaker
 
 2009-07-04  Kingpin  <Martin@BLUEMAX>
 
